--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -9,7 +9,18 @@ jobs:
             - name: Welcome 
               run: |
                 echo "Hello world"
+            
+            - name: checkout code
+              uses: actions/checkout@v4
+                
+            - name: Install cowsay
+              run: |
                 sudo apt update -y
                 sudo apt install cowsay -y
                 cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
                 cat dragon.txt
+            
+            - name: Run a script
+              run: |
+                ls -lhrt
+                cat readme.md
