--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -20,7 +20,10 @@ jobs:
                 cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
                 cat dragon.txt
             
+    show_README:
+        runs-on: ubuntu-latest
+        steps:
             - name: Run a script
               run: |
                 ls -lhrt
-                cat readme.md
+                cat README.md
