--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -9,9 +9,6 @@ jobs:
             - name: Welcome 
               run: |
                 echo "Hello world"
-            
-            - name: checkout code
-              uses: actions/checkout@v4
                 
             - name: Install cowsay
               run: |
@@ -23,6 +20,8 @@ jobs:
     show_README:
         runs-on: ubuntu-latest
         steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
             - name: Run a script
               run: |
                 ls -lhrt
